🔧 Fix pip install issue - use virtual environment to avoid externally-managed-environment error

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,11 +1,14 @@
 [phases.setup]
-nixPkgs = ["python311", "python311Packages.pip"]
+nixPkgs = ["python311"]
 
 [phases.install]
-cmds = ["pip install -r api_requirements.txt"]
+cmds = [
+  "python -m venv venv",
+  "source venv/bin/activate && pip install -r requirements.txt"
+]
 
 [phases.build]
 cmds = ["echo 'Build completed'"]
 
 [start]
-cmd = "python api_server.py" 
+cmd = "source venv/bin/activate && python api_server.py" 
