Update: Railway deployment with latest features
- Updated requirements.txt with Flask API dependencies (Flask, Flask-CORS, gunicorn)
- Enhanced .gitignore to exclude processed images, logs, and temp files
- Added comprehensive DEPLOYMENT.md with Railway setup guide
- Created README.md with API documentation and usage examples
- Updated universal_processor.py with latest image processing features
- Included PNG to JPG conversion and web processing capabilities
- Added utility scripts for batch conversion and quality upscaling

Ready for Railway deployment with Docker configuration.

--- a/.gitignore
+++ b/.gitignore
@@ -37,11 +37,24 @@ Thumbs.db
 
 # Temporary files
 temp_uploads/
+temp_single_input/
+temp_single_output/
 *.tmp
 *.temp
 
-# Logs
+# Logs and Reports
 *.log
+quality_report.json
+
+# Processed Images and Outputs
+processed_images/
+processed_*/
+*.zip
+
+# Test Data
+test_*/
+input_images/
+grizly-full-povolene-produkty/
 
 # Environment variables
 .env
@@ -49,4 +62,10 @@ temp_uploads/
 .env.production
 
 # Railway specific
-.railway/ 
+.railway/
+
+# CSV Data Files
+*.csv
+
+# Upscayl Batch
+.tmp_upscayl_batch/ 
