--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,14 @@
+# Flask API Server
 Flask>=2.3.0
 Flask-CORS>=4.0.0
-Pillow>=10.0.0
-tqdm>=4.66.0
-numpy>=1.24.0
-scipy>=1.10.0
-rembg>=2.0.0
-onnxruntime>=1.22.0
 werkzeug>=2.3.0
-gunicorn>=21.0.0 
+gunicorn>=21.0.0
+
+# Image Processing
+Pillow>=10.0.0
+numpy>=1.24.0
+opencv-python>=4.8.0
+
+# Utilities
+tqdm>=4.66.0
+requests>=2.31.0 
